# never_fox

./: .gitignore  CLAUDE.md  README.md  REPORT.md  pyproject.toml  setup.py
.github/workflows/: build.yml
harness/: capture_firefox.py  diff_report.py  drive_engine.py  hello_sink.py  stability_and_verify.py  tune_engine.py  verify_nss.py
harness/localcap/: FULL_DIFF.md  MULTISITE.md  diff_h2cap.py  local_h2_server.py
native/: _debug_repro.py  build.py  build.sh  build_manylinux.sh  bundle.py  firefox152_reference.json  fxtls.c  fxtls_config.h  fxtls_lib.c  stage_lib.py  verify.py
native/h3/: build_h3.py
native/h3/files/neqo/neqo-transport/src/: crypto.rs
native/h3/files/nss-rs/: Cargo.toml
native/h3/files/nss-rs/src/: agent.rs  cert_compress.rs  constants.rs  lib.rs  ssl.rs
never_fox/: __init__.py  _native.py  aio.py  client.py  cookies.py  h2conn.py  h3.py  http1.py
reports/: clienthello_diff.md
