[workspace]
members = ["test-fixture"]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mozilla/nss-rs"

[workspace.dependencies]
log = { version = "0.4", default-features = false }
nss-rs = { path = "." }

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"
missing_abi = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly,fuzzing)'] }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
allow_attributes_without_reason = "allow"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
string_lit_chars_any = "warn"
suspicious_xor_used_as_pow = "warn"
try_err = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

[package]
name = "nss-rs"
version = "0.13.4"
authors = ["Martin Thomson <mt@lowentropy.net>", "Andy Leiserson <aleiserson@mozilla.com>", "John M. Schanck <jschanck@mozilla.com>", "Benjamin Beurdouche <beurdouche@mozilla.com>", "Anna Weine <anna.weine@mozilla.com>"]
categories = ["network-programming", "web-programming"]
keywords = ["nss", "crypto", "mozilla", "firefox"]
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
license.workspace = true
description = "Gecko API for NSS"
repository.workspace = true
exclude = [
    ".deny.toml",
    ".github",
    "Cargo.lock",
    "renovate.json",
]

[dependencies]
brotli-decompressor = "5.0.3"
enum-map = { version = "2.7", default-features = false }
flate2 = "1.1.9"
log = { workspace = true }
once_cell = "1"
pkcs11-bindings = ">= 0.1.3"
strum = { version = "0.27", default-features = false, features = ["derive"] }
thiserror = "2"
zeroize = { version = "1", default-features = false, features = ["derive"], optional = true }
zstd = "0.13.3"

[target.'cfg(windows)'.dependencies]
windows = { version = ">=0.60,<0.63", features = ["Win32_Security_Authentication_Identity"]}

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
mozbuild = { version = "0.1", default-features = false, optional = true }
semver = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["std"] }
serde_derive = { version = "1", default-features = false }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

[dev-dependencies]
test-fixture = { path = "test-fixture" }

[package.metadata.cargo-machete]
ignored = ["bindgen", "semver", "serde", "serde_derive", "toml"]

[lints]
workspace = true

[features]
bench = ["log/release_max_level_info"]
# Bypass PKCS#11 session layer for RecordProtection AEAD operations by calling
# freebl directly. Improves performance but skips softoken's FIPS self-test gate.
blapi = ["dep:zeroize"]
disable-encryption = []
disable-random = []
gecko = ["mozbuild"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
